library/src/cbor/libqcborvalue.h

typedef struct QCborArray QCborArray;
typedef struct QCborMap QCborMap;
typedef struct QCborParserError QCborParserError;
typedef struct QCborStreamReader QCborStreamReader;
typedef struct QCborStreamWriter QCborStreamWriter;
typedef struct QCborValue QCborValue;
typedef struct QCborValueRef QCborValueRef;
typedef struct QDateTime QDateTime;
typedef struct QJsonValue QJsonValue;
typedef struct QRegularExpression QRegularExpression;
typedef struct QUrl QUrl;
typedef struct QUuid QUuid;
typedef struct QVariant QVariant;
QCborParserError* QCborParserError_new(QCborParserError* other);
QCborParserError* QCborParserError_new2(QCborParserError* other);
libqt_string QCborParserError_ErrorString(const QCborParserError* self);
QCborValue* QCborValue_new();
QCborValue* QCborValue_new2(int t_);
QCborValue* QCborValue_new3(bool b_);
QCborValue* QCborValue_new4(int i);
QCborValue* QCborValue_new5(unsigned int u);
QCborValue* QCborValue_new6(long long i);
QCborValue* QCborValue_new7(double v);
QCborValue* QCborValue_new8(uint8_t st);
QCborValue* QCborValue_new9(libqt_string ba);
QCborValue* QCborValue_new10(libqt_string s);
QCborValue* QCborValue_new11(const char* s);
QCborValue* QCborValue_new12(QCborArray* a);
QCborValue* QCborValue_new13(QCborMap* m);
QCborValue* QCborValue_new14(uint64_t tag);
QCborValue* QCborValue_new15(int t_);
QCborValue* QCborValue_new16(QDateTime* dt);
QCborValue* QCborValue_new17(QUrl* url);
QCborValue* QCborValue_new18(QRegularExpression* rx);
QCborValue* QCborValue_new19(QUuid* uuid);
QCborValue* QCborValue_new20(QCborValue* other);
QCborValue* QCborValue_new21(uint64_t tag, QCborValue* taggedValue);
QCborValue* QCborValue_new22(int t_, QCborValue* tv);
void QCborValue_OperatorAssign(QCborValue* self, QCborValue* other);
void QCborValue_Swap(QCborValue* self, QCborValue* other);
int QCborValue_Type(const QCborValue* self);
bool QCborValue_IsInteger(const QCborValue* self);
bool QCborValue_IsByteArray(const QCborValue* self);
bool QCborValue_IsString(const QCborValue* self);
bool QCborValue_IsArray(const QCborValue* self);
bool QCborValue_IsMap(const QCborValue* self);
bool QCborValue_IsTag(const QCborValue* self);
bool QCborValue_IsFalse(const QCborValue* self);
bool QCborValue_IsTrue(const QCborValue* self);
bool QCborValue_IsBool(const QCborValue* self);
bool QCborValue_IsNull(const QCborValue* self);
bool QCborValue_IsUndefined(const QCborValue* self);
bool QCborValue_IsDouble(const QCborValue* self);
bool QCborValue_IsDateTime(const QCborValue* self);
bool QCborValue_IsUrl(const QCborValue* self);
bool QCborValue_IsRegularExpression(const QCborValue* self);
bool QCborValue_IsUuid(const QCborValue* self);
bool QCborValue_IsInvalid(const QCborValue* self);
bool QCborValue_IsContainer(const QCborValue* self);
bool QCborValue_IsSimpleType(const QCborValue* self);
bool QCborValue_IsSimpleTypeWithSt(const QCborValue* self, uint8_t st);
uint8_t QCborValue_ToSimpleType(const QCborValue* self);
long long QCborValue_ToInteger(const QCborValue* self);
bool QCborValue_ToBool(const QCborValue* self);
double QCborValue_ToDouble(const QCborValue* self);
uint64_t QCborValue_Tag(const QCborValue* self);
QCborValue* QCborValue_TaggedValue(const QCborValue* self);
libqt_string QCborValue_ToByteArray(const QCborValue* self);
libqt_string QCborValue_ToString(const QCborValue* self);
QDateTime* QCborValue_ToDateTime(const QCborValue* self);
QUrl* QCborValue_ToUrl(const QCborValue* self);
QRegularExpression* QCborValue_ToRegularExpression(const QCborValue* self);
QUuid* QCborValue_ToUuid(const QCborValue* self);
QCborArray* QCborValue_ToArray(const QCborValue* self);
QCborArray* QCborValue_ToArrayWithDefaultValue(const QCborValue* self, QCborArray* defaultValue);
QCborMap* QCborValue_ToMap(const QCborValue* self);
QCborMap* QCborValue_ToMapWithDefaultValue(const QCborValue* self, QCborMap* defaultValue);
QCborValue* QCborValue_OperatorSubscript(const QCborValue* self, libqt_string key);
QCborValue* QCborValue_OperatorSubscript2(const QCborValue* self, long long key);
QCborValueRef* QCborValue_OperatorSubscript3(QCborValue* self, long long key);
QCborValueRef* QCborValue_OperatorSubscript5(QCborValue* self, libqt_string key);
int QCborValue_Compare(const QCborValue* self, QCborValue* other);
bool QCborValue_OperatorEqual(const QCborValue* self, QCborValue* other);
bool QCborValue_OperatorNotEqual(const QCborValue* self, QCborValue* other);
bool QCborValue_OperatorLesser(const QCborValue* self, QCborValue* other);
QCborValue* QCborValue_FromVariant(QVariant* variant);
QVariant* QCborValue_ToVariant(const QCborValue* self);
QCborValue* QCborValue_FromJsonValue(QJsonValue* v);
QJsonValue* QCborValue_ToJsonValue(const QCborValue* self);
QCborValue* QCborValue_FromCbor(QCborStreamReader* reader);
QCborValue* QCborValue_FromCborWithBa(libqt_string ba);
QCborValue* QCborValue_FromCbor2(const char* data, ptrdiff_t lenVal);
QCborValue* QCborValue_FromCbor3(const unsigned char* data, ptrdiff_t lenVal);
libqt_string QCborValue_ToCbor(const QCborValue* self);
void QCborValue_ToCborWithWriter(const QCborValue* self, QCborStreamWriter* writer);
libqt_string QCborValue_ToDiagnosticNotation(const QCborValue* self);
uint8_t QCborValue_ToSimpleType1(const QCborValue* self, uint8_t defaultValue);
long long QCborValue_ToInteger1(const QCborValue* self, long long defaultValue);
bool QCborValue_ToBool1(const QCborValue* self, bool defaultValue);
double QCborValue_ToDouble1(const QCborValue* self, double defaultValue);
uint64_t QCborValue_Tag1(const QCborValue* self, uint64_t defaultValue);
QCborValue* QCborValue_TaggedValue1(const QCborValue* self, QCborValue* defaultValue);
libqt_string QCborValue_ToByteArray1(const QCborValue* self, libqt_string defaultValue);
libqt_string QCborValue_ToString1(const QCborValue* self, libqt_string defaultValue);
QDateTime* QCborValue_ToDateTime1(const QCborValue* self, QDateTime* defaultValue);
QUrl* QCborValue_ToUrl1(const QCborValue* self, QUrl* defaultValue);
QRegularExpression* QCborValue_ToRegularExpression1(const QCborValue* self, QRegularExpression* defaultValue);
QUuid* QCborValue_ToUuid1(const QCborValue* self, QUuid* defaultValue);
QCborValue* QCborValue_FromCbor22(libqt_string ba, QCborParserError* errorVal);
QCborValue* QCborValue_FromCbor32(const char* data, ptrdiff_t lenVal, QCborParserError* errorVal);
QCborValue* QCborValue_FromCbor33(const unsigned char* data, ptrdiff_t lenVal, QCborParserError* errorVal);
libqt_string QCborValue_ToCbor1(const QCborValue* self, int opt);
void QCborValue_ToCbor2(const QCborValue* self, QCborStreamWriter* writer, int opt);
libqt_string QCborValue_ToDiagnosticNotation1(const QCborValue* self, int opts);